--- a/css/weather.css
+++ b/css/weather.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 
 }
+
+body {
+    background-color: #ABDCFD;
+}
 .column{
     margin: 0 auto;
     width: 95%;
@@ -14,6 +18,7 @@
     float: left;
     border: solid black 1px;
     text-align: center;
+    background-color: white;
     /*box-sizing: border-box;*/
 
 }
