adding map background

--- a/css/weather.css
+++ b/css/weather.css
@@ -25,3 +25,9 @@ body {
 .container{
     background-color: #ABDCFD;
 }
+
+#map-canvas {
+    width: 85%;
+    height: 481px;
+    background-color: red;
+}
