--- a/css/weather.css
+++ b/css/weather.css
@@ -1,10 +1,12 @@
 *{
     box-sizing: border-box;
-
+    font-family: sans-serif;
 }
 
 body {
     background-color: #ABDCFD;
+
+
 }
 .column{
     margin: 0 auto;
@@ -33,4 +35,6 @@ body {
     margin: 50px;
 
 }
+
+
 
